; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-ssa-structalias.c_find_indirect_cycles.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-ssa-structalias.c_find_indirect_cycles.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.scc_info = type { i32 }

@LAST_REF_NODE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*)* @find_indirect_cycles to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @find_indirect_cycles(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.scc_info*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call %struct.scc_info* @init_scc_info(i32 %9)
  store %struct.scc_info* %10, %struct.scc_info** %5, align 8
  store i32 0, i32* %3, align 4
  br label %11

11:                                               ; preds = %35, %1
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @LAST_REF_NODE, align 4
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @MIN(i32 %13, i32 %14)
  %16 = icmp ult i32 %12, %15
  br i1 %16, label %17, label %38

17:                                               ; preds = %11
  %18 = load %struct.scc_info*, %struct.scc_info** %5, align 8
  %19 = getelementptr inbounds %struct.scc_info, %struct.scc_info* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @TEST_BIT(i32 %20, i32 %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %34, label %24

24:                                               ; preds = %17
  %25 = load i32, i32* %3, align 4
  %26 = call i32 @find(i32 %25)
  %27 = load i32, i32* %3, align 4
  %28 = icmp eq i32 %26, %27
  br i1 %28, label %29, label %34

29:                                               ; preds = %24
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %31 = load %struct.scc_info*, %struct.scc_info** %5, align 8
  %32 = load i32, i32* %3, align 4
  %33 = call i32 @scc_visit(%struct.TYPE_4__* %30, %struct.scc_info* %31, i32 %32)
  br label %34

34:                                               ; preds = %29, %24, %17
  br label %35

35:                                               ; preds = %34
  %36 = load i32, i32* %3, align 4
  %37 = add i32 %36, 1
  store i32 %37, i32* %3, align 4
  br label %11

38:                                               ; preds = %11
  %39 = load %struct.scc_info*, %struct.scc_info** %5, align 8
  %40 = call i32 @free_scc_info(%struct.scc_info* %39)
  ret void
}

declare dso_local %struct.scc_info* @init_scc_info(i32) #1

declare dso_local i32 @MIN(i32, i32) #1

declare dso_local i32 @TEST_BIT(i32, i32) #1

declare dso_local i32 @find(i32) #1

declare dso_local i32 @scc_visit(%struct.TYPE_4__*, %struct.scc_info*, i32) #1

declare dso_local i32 @free_scc_info(%struct.scc_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
